# comfyui-docker

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  install_custom_requirements.sh  start.sh
.github/workflows/: dockerhub.yml
custom_nodes/.disabled/ComfyUI-QwenImageLoraLoader@2_3_4/: .tracking
custom_nodes/.disabled/comfyui-inpaint-cropandstitch@3_0_2/: .tracking
custom_nodes/.disabled/comfyui-ollamagemini@3_0_0/: .tracking
custom_nodes/.disabled/wavespeed-comfyui@1_5_0/: .style.yapf  .tracking  README.md
custom_nodes/ComfyUI-IPAdapter-Flux/: attention_processor_advanced.py  ipadapter_flux_advanced.py
custom_nodes/ComfyUI-OnDemand-Loaders.git/: .gitignore  .tracking  LICENSE.txt  README.md  __init__.py  lora_node.py  nodes.py  pyproject.toml  test.py
custom_nodes/ComfyUI-OnDemand-Loaders.git/example/: config.json  workflow_example.json
custom_nodes/ComfyUI-OnDemand-Loaders.git/js/: SearchableCombo.js  onDemandLoader.js  searchableCombo.css
custom_nodes/ComfyUI-PuLID-Flux-Enhanced/: README.md
custom_nodes/ComfyUI-QwenVL/: AILab_QwenVL.py  README.md
custom_nodes/ComfyUI_Civitai_Gallery/: .tracking  civitai_models_ui_state.json  pyproject.toml
custom_nodes/ComfyUI_Civitai_Gallery/js/: civitai_gallery.js  civitai_models_gallery.js
custom_nodes/ComfyUI_Simple_Qwen3-VL-gguf/: .tracking  CHANGELOG.md  README.md  __init__.py  llavavl_run.py  pyproject.toml  qwen3vl_node.py  qwen3vl_run.py  system_prompts.json
custom_nodes/HeartMuLa_ComfyUI-main/: ComfyUI file structure.txt
custom_nodes/Unified-Vision-Prompt-Generator/: README.md  UnifiedVisionPromptGenerator.py  __init__.py
custom_nodes/basic_data_handling/: .tracking  MANIFEST.in  README.md  __init__.py  pyproject.toml
custom_nodes/basic_data_handling/.github/: ISSUE_TEMPLATE.md
custom_nodes/basic_data_handling/tests/: __init__.py  conftest.py  test_boolean_nodes.py  test_casting_nodes.py  test_comparison_nodes.py  test_control_flow_nodes.py  test_data_list_nodes.py  test_dict_nodes.py  test_float_nodes.py  test_int_nodes.py  test_list_nodes.py  test_math_formula_node.py  (+6 more)
custom_nodes/checkpoint-discovery-hub/: .tracking  CheckpointDiscoveryHub.py  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
custom_nodes/checkpoint-discovery-hub/js/: CheckpointDiscoveryHub.js
custom_nodes/civicomfy/: .tracking
custom_nodes/comfyui-automaticcfg/: .tracking
custom_nodes/comfyui-detail-daemon/: .tracking  LICENSE  README.md  __init__.py  detail_daemon_node.py  pyproject.toml
custom_nodes/comfyui-docker/: README.md  docker-bake.hcl
custom_nodes/comfyui-image-saver/: .tracking  __init__.py
custom_nodes/comfyui-kjnodes/: .tracking
custom_nodes/comfyui-lora-auto-trigger-words/: .tracking  README.md  nodes_autotrigger.py  pyproject.toml  utils.py
custom_nodes/comfyui-model-manager/: .tracking  private.key
custom_nodes/comfyui-reactor/: nodes.py
custom_nodes/comfyui-rmbg/: AILab_ImageMaskTools.py  AILab_SAM3Segment.py
custom_nodes/comfyui-to-python-extension/: .tracking
custom_nodes/comfyui-upscale-by-model/: __init__.py
custom_nodes/comfyui_image_metadata_extension/: .tracking
custom_nodes/comfyui_instantid/: .tracking
custom_nodes/comfyui_slk_joy_caption_two/: .tracking
custom_nodes/comfyui_zenid/: .tracking
custom_nodes/efficiency-nodes-comfyui/: .tracking
custom_nodes/load-image-and-display-prompt-metadata/: .tracking  README.md  __init__.py  pyproject.toml
custom_nodes/lora-assistant/: .tracking  LICENSE  README.md  __init__.py  lora_trigger_local.py  pyproject.toml
custom_nodes/lora-assistant/.github/workflows/: publish.yml
custom_nodes/lora-assistant/js/: lora_trigger_local.js
custom_nodes/next-scene-qwen-image-lora-2509/: .gitattributes
custom_nodes/pnginfo_sidebar/: .tracking  CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml
custom_nodes/pnginfo_sidebar/web/: ImageUploader.js  pnginfo_sidebar.js  read_prompt_base.js  read_prompt_comfy.js  read_prompt_forge.js
custom_nodes/qweneditutils/: .tracking
custom_nodes/qwenloraloaderselective/: .tracking  LICENSE  README.md  README_en.md  __init__.py  nodes.py  pyproject.toml
custom_nodes/qwenloraloaderselective/.github/workflows/: publish.yml
custom_nodes/seedvarianceenhancer/: LICENSE  README.md  pyproject.toml  seed_variance_enhancer.py
custom_nodes/ultimate-auto-sampler-config-grid-testing-suite/: .tracking  README.md  dashboard_node.py  html_generator.py  pyproject.toml  sampler_node.py
custom_nodes/ultimate-auto-sampler-config-grid-testing-suite/.github/workflows/: publish.yml
custom_nodes/ultimate-auto-sampler-config-grid-testing-suite/resources/: logic_events.js  logic_init.js  logic_pipeline.js  logic_state.js  logic_ui.js  logic_utils.js  logic_virtual.js  report.css  template.html
custom_nodes/ultimate-auto-sampler-config-grid-testing-suite/web/: dashboard.js
custom_nodes/wavespeed-comfyui/: __init__.py  pyproject.toml
custom_nodes/wavespeed-comfyui/examples/: controlnet_union_pro2.json  dynamic-nodes-nano-banana.json  dynamic-nodes-qwen-lora.json  dynamic-nodes-seedreamv4-sequential.json  seedream.json
custom_nodes/wavespeed-comfyui/py/: bytedance_seedance_lite_i2v.py  bytedance_seedance_pro_i2v.py  flux_control_lora_depth.py  flux_dev_fill.py  flux_dev_lora.py  flux_dev_lora_ultra_fast.py  flux_pro_redux.py  flux_redux_dev.py  flux_schnell_lora.py  ghibli.py  google_veo3_fast.py  hidream_i1_dev.py  hidream_i1_full.py  hunyuan_video_t2v.py  kwaivgi_kling_v1_6_i2v_pro.py  kwaivgi_kling_v1_6_t2v_standard.py  kwaivgi_kling_v2_1_i2v_standard.py  kwaivgi_kling_v2_1_t2v_master.py  ltx_video_v097_i2v_480p.py  ltx_video_v097_i2v_720p.py  minimax_video_01.py  old_wavespeed_api.py  seededit_v3.py  step1x_edit.py  uno.py  vidu_image_to_video_2_0.py  vidu_reference_to_video_2_0.py  wan_2_1_14b_vace.py  wan_2_1_i2v_480p_lora_ultra_fast.py  wan_2_1_i2v_720p.py  wan_2_1_t2v_480p_ultra_fast.py  wan_2_1_t2v_720p_lora_ultra_fast.py  wan_2_1_t2v_720p_ultra_fast.py  wavespeed_ai_veo2_t2v.py  wavespeed_api_endpoints.py  wavespeed_api_utils.py  wavespeed_task_nodes.py
(+78 files in other folders)
