[project]
name = "checkpoint-discovery-hub"
description = "🧬 Checkpoint Discovery Hub — An advanced browser for your ComfyUI models. Easily explore, filter, and load your checkpoints, manage presets, favorites, and Civitai metadata — all from a sleek and intuitive interface."
version = "1.0.3"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.21.0", "Pillow>=9.0.0", "aiohttp>=3.8.0", "requests>=2.28.0", "tqdm>=4.65.0"]

[project.urls]
Repository = "https://github.com/Light-x02/ComfyUI-checkpoint-Discovery-Hub"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Light-x02/ComfyUI-checkpoint-Discovery-Hub/wiki"
"Bug Tracker" = "https://github.com/Light-x02/ComfyUI-checkpoint-Discovery-Hub/issues"

[tool.comfy]
PublisherId = "lightx02"
DisplayName = "ComfyUI-checkpoint-Discovery-Hub"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

