[project]
name = "lora-assistant"
description = "The plug-in is designed to automatically save the association between the LoRA model and Trigger words to a Local JSON file so that when the LoRA model is loaded, the associated trigger words can be automatically loaded via the node 'LoRA Trigger Local' without manual input."
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Bellzs/ComfyUI-LoRA-Assistant"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bellzs"
DisplayName = "ComfyUI-LoRA-Assistant"
Icon = ""
